@@ -3523,7 +3523,7 @@ class EmitCTrace final : EmitCStmts {
             puts("if (VL_UNLIKELY(!__VlSymsp->__Vm_dumperp)) {\n");
             puts("__VlSymsp->__Vm_dumperp = new " + v3Global.opt.traceClassLang() + "();\n");
             puts("trace(__VlSymsp->__Vm_dumperp, 0, 0);\n");
-            puts("std::string dumpfile = __VlSymsp->_vm_contextp__->dumpfile();\n");
+            puts("std::string dumpfile = __VlSymsp->_vm_contextp__->dumpfileCheck();\n");
             puts("__VlSymsp->__Vm_dumperp->open(dumpfile.c_str());\n");
             puts("__VlSymsp->__Vm_dumping = true;\n");
             puts("}\n");
