@@ -10,6 +10,8 @@ The contributors that suggested a given feature are shown in []. Thanks!
 
 ****  Fix exceeding command-line ar limit (#2834). [Yinan Xu]
 
+****  Fix false $dumpfile warning on model save (#2834). [Yinan Xu]
+
 
 * Verilator 4.200 2021-03-12
 
